--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@
 <body>
 <canvas id="c"></canvas>
 <script src="app.js"></script>
+  <button id="motionBtn" style="
+  position:fixed; top:12px; left:12px; z-index:10;
+  font-size:16px; padding:10px 12px; border-radius:14px; border:0;
+  opacity:0.9;">
+  Enable Motion
+</button>
 </body>
 </html>
+
