--- a/index.html
+++ b/index.html
@@ -1,23 +1,39 @@
 <!doctype html>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#000">
-  <link rel="manifest" href="manifest.webmanifest">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+  <meta name="theme-color" content="#000000" />
+  <title>Mochi</title>
+
   <style>
-    html,body{margin:0;height:100%;background:#000;overflow:hidden}
-    canvas{width:100%;height:100%}
+    html, body {
+      margin: 0;
+      height: 100%;
+      background: black;
+      overflow: hidden;
+    }
+
+    canvas {
+      width: 100%;
+      height: 100%;
+      display: block;
+    }
+
+    button {
+      position: fixed;
+      top: 12px;
+      left: 12px;
+      z-index: 10;
+      font-size: 16px;
+      padding: 10px 14px;
+      border-radius: 14px;
+      border: 0;
+      background: white;
+    }
   </style>
 </head>
-<body>
-<canvas id="c"></canvas>
-<script src="app.js"></script>
-  <button id="motionBtn" style="
-  position:fixed; top:12px; left:12px; z-index:10;
-  font-size:16px; padding:10px 12px; border-radius:14px; border:0;
-  opacity:0.9;">
-  Enable Motion
-</button>
-</body>
-</html>
 
+<body>
+  <button id="motionBtn">Enable Motion</button>
+  <canvas id="c
